# eiwd_old

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile.am  README  bootstrap  configure.ac  iwc  iwd_passphrase
.github/workflows/: bootstrap  ci.yml  shell.yml
build-aux/: README
src/: adhoc.c  agent.c  agent.h  ap.c  dbus.c  dbus.h  device.c  iwd.config.5  iwd.config.rst  knownnetworks.c  main.c  netconfig.c  network.c  network.h  resolve.c  station.c  station.h  storage.c  wiphy.c  wsc.c
